kubernetes/auth_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: angelo3100/elaborato-ds-auth_service:latest
          ports:
            - containerPort: 5000
          command: ["flask", "--app", "auth", "run", "--host=0.0.0.0"]
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-service
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
