kubernetes/mysql_api.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-api
spec:
  selector:
    app: mysql-api
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306

---


apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-api
spec:
  serviceName: "mysql-api"
  replicas: 1
  selector:
    matchLabels:
      app: mysql-api
  template:
    metadata:
      labels:
        app: mysql-api
    spec:
      containers:
        - name: mysql-api
          image: mysql:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-data-api
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: mysql-data-api
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 100Mi
