kubernetes/mysql_subscription.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-subscription
spec:
  selector:
    app: mysql-subscription
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-subscription
spec:
  serviceName: "mysql-subscription"
  replicas: 1
  selector:
    matchLabels:
      app: mysql-subscription
  template:
    metadata:
      labels:
        app: mysql-subscription
    spec:
      containers:
        - name: mysql-subscription
          image: mysql:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-data-subscription
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: mysql-data-subscription
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 100Mi
