kubernetes/notifier_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifier-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifier-service
  template:
    metadata:
      labels:
        app: notifier-service
    spec:
      containers:
        - name: notifier-service
          image: angelo3100/elaborato-ds-notifier_service:latest
          ports:
            - containerPort: 5000
          command: ["python", "-u", "notifier.py"]
---
apiVersion: v1
kind: Service
metadata:
  name: notifier-service
spec:
  selector:
    app: notifier-service
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
