kubernetes/sla_manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sla-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sla-manager
  template:
    metadata:
      labels:
        app: sla-manager
    spec:
      containers:
        - name: sla-manager
          image: angelo3100/elaborato-ds-sla_manager:latest
          ports:
            - containerPort: 5000
          command: ["flask", "--app", "sla", "run", "--host=0.0.0.0"]
---
apiVersion: v1
kind: Service
metadata:
  name: sla-manager
spec:
  selector:
    app: sla-manager
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
