kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"

spec:
  ingressClassName: "nginx"
  rules:
    - host: localhost
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /auth(/|$)(.*)
            backend:
              service:
                name: auth-service
                port:
                  number: 5000

          - pathType: ImplementationSpecific
            path: /subscription(/|$)(.*)
            backend:
              service:
                name: subscription-service
                port:
                  number: 5000

          - pathType: ImplementationSpecific
            path: /sla(/|$)(.*)
            backend:
              service:
                name: sla-manager
                port:
                  number: 5000
